crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaLorawanDirection_Uplink = 0,
  PamojaLorawanDirection_Downlink = 1,
} PamojaLorawanDirection;
typedef struct PamojaGatewayNetwork PamojaGatewayNetwork;
typedef struct PamojaLoraPlan PamojaLoraPlan;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  uint64_t received_at_us;
  uint64_t gps_millis;
  uint32_t frequency_hz;
  uint32_t timestamp_us;
  PamojaLoraLink link;
  uint32_t bitrate_bps;
  int32_t rssi_centi_dbm;
  int32_t snr_centi_db;
  uint8_t channel;
  uint8_t rf_chain;
  int8_t crc;
  uint8_t modulation;
  bool has_received_at;
  bool has_gps_millis;
  bool has_timestamp;
  bool has_snr;
} PamojaGatewayRxpk;
typedef struct {
  uint64_t gps_millis;
  uint32_t frequency_hz;
  uint32_t timestamp_us;
  PamojaLoraLink link;
  uint32_t bitrate_bps;
  uint32_t frequency_deviation_hz;
  uint16_t preamble_symbols;
  uint8_t rf_chain;
  int8_t power_dbm;
  uint8_t modulation;
  bool immediate;
  bool invert_polarity;
  bool without_crc;
  bool has_timestamp;
  bool has_gps_millis;
  bool has_deviation;
  bool has_preamble;
} PamojaGatewayTxpk;
typedef struct {
  uint32_t receive_delay_us;
  uint32_t join_delay_us;
  uint8_t rx1_data_rate_offset;
  uint8_t rx1_channels;
  uint32_t downstream_start_hz;
  uint32_t downstream_step_hz;
  uint16_t downstream_count;
} PamojaGatewayNetworkWindows;
typedef struct {
  uint32_t timestamp_us;
  uint32_t frequency_hz;
  PamojaLoraLink link;
} PamojaGatewayNetworkSlot;
typedef struct {
  uint8_t outcome;
  uint8_t dev_eui[8];
  uint32_t dev_addr;
  uint32_t fcnt;
  uint8_t fport;
  bool has_fport;
  bool confirmed;
  uintptr_t len;
  bool truncated;
  PamojaGatewayNetworkSlot slot;
  PamojaGatewayTxpk accept;
  bool relayed;
  uint32_t relay_dev_addr;
  int16_t relay_rssi_dbm;
  int8_t relay_snr_db;
  uint8_t relay_data_rate;
  uint8_t relay_wor_channel;
  uint32_t relay_frequency_hz;
} PamojaGatewayNetworkEvent;
typedef struct {
  uint32_t relay;
  uint32_t dev_addr;
  int16_t rssi_dbm;
  int8_t snr_db;
} PamojaGatewayNetworkNotice;
typedef struct {
  uint8_t cid;
  PamojaLorawanDirection direction;
  uint8_t margin;
  uint8_t gateways;
  uint8_t data_rate;
  uint8_t tx_power;
  uint16_t channel_mask;
  uint8_t mask_control;
  uint8_t transmissions;
  uint8_t power_ack;
  uint8_t data_rate_ack;
  uint8_t channel_mask_ack;
  uint8_t max_duty_cycle;
  uint8_t rx1_offset;
  uint8_t rx2_data_rate;
  uint32_t frequency_hz;
  uint8_t rx1_offset_ack;
  uint8_t rx2_data_rate_ack;
  uint8_t channel_ack;
  uint8_t battery;
  int8_t snr_margin;
  uint8_t index;
  uint8_t max_data_rate;
  uint8_t min_data_rate;
  uint8_t data_rate_range_ok;
  uint8_t frequency_ok;
  uint8_t delay;
  uint8_t max_eirp;
  uint8_t uplink_dwell;
  uint8_t downlink_dwell;
  uint8_t uplink_frequency_exists;
  uint32_t seconds;
  uint8_t fraction;
  uint8_t enabled;
  uint8_t cad_periodicity;
  uint8_t default_channel_index;
  uint8_t second_channel_index;
  uint8_t second_channel_data_rate;
  uint8_t second_channel_ack_offset;
  uint8_t cad_periodicity_ack;
  uint8_t default_channel_index_ack;
  uint8_t second_channel_index_ack;
  uint8_t second_channel_data_rate_ack;
  uint8_t second_channel_ack_offset_ack;
  uint8_t second_channel_frequency_ack;
  uint8_t relay_mode;
  uint8_t smart_enable_level;
  uint8_t back_off;
  uint8_t action;
  uint8_t eui_len;
  uint8_t eui[16];
  uint8_t combined_rules_ack;
  uint8_t eui_len_ack;
  uint8_t action_ack;
  uint8_t reload_rate;
  uint8_t bucket_size;
  uint32_t dev_addr;
  uint32_t wfcnt;
  uint8_t root_wor_s_key[16];
  uint8_t index_ack;
  uint8_t reset_limit_counters;
  uint8_t join_request_reload_rate;
  uint8_t notify_reload_rate;
  uint8_t global_uplink_reload_rate;
  uint8_t overall_reload_rate;
  uint8_t join_request_bucket_size;
  uint8_t notify_bucket_size;
  uint8_t global_uplink_bucket_size;
  uint8_t overall_bucket_size;
  int16_t rssi_dbm;
  int8_t snr_db;
} PamojaLorawanMacCommand;
PamojaGatewayNetworkWindows pamoja_gateway_network_windows_default(void);
PamojaStatus pamoja_gateway_network_open(const PamojaLoraPlan *plan,
                                         uint32_t net_id,
                                         PamojaGatewayNetworkWindows windows,
                                         uint32_t first_dev_addr,
                                         PamojaGatewayNetwork **out_network);
PamojaStatus pamoja_gateway_network_register(PamojaGatewayNetwork *network,
                                             const uint8_t *dev_eui,
                                             const uint8_t *app_eui,
                                             const uint8_t *app_key);
PamojaStatus pamoja_gateway_network_uplink(PamojaGatewayNetwork *network,
                                           PamojaGatewayRxpk packet,
                                           const uint8_t *payload,
                                           uintptr_t payload_len,
                                           uint8_t *buffer,
                                           uintptr_t capacity,
                                           PamojaGatewayNetworkEvent *out_event);
PamojaStatus pamoja_gateway_network_answer(PamojaGatewayNetwork *network,
                                           uint32_t dev_addr,
                                           PamojaGatewayNetworkSlot slot,
                                           uint8_t fport,
                                           const uint8_t *payload,
                                           uintptr_t payload_len,
                                           uint8_t *buffer,
                                           uintptr_t capacity,
                                           PamojaGatewayTxpk *out_txpk,
                                           uintptr_t *out_len);
PamojaStatus pamoja_gateway_network_notices(PamojaGatewayNetwork *network,
                                            PamojaGatewayNetworkNotice *out_notices,
                                            uintptr_t capacity,
                                            uintptr_t *out_len);
PamojaStatus pamoja_gateway_network_command(PamojaGatewayNetwork *network,
                                            uint32_t dev_addr,
                                            PamojaGatewayNetworkSlot slot,
                                            const PamojaLorawanMacCommand *commands,
                                            uintptr_t commands_len,
                                            uint8_t *buffer,
                                            uintptr_t capacity,
                                            PamojaGatewayTxpk *out_txpk,
                                            uintptr_t *out_len);
PamojaStatus pamoja_gateway_network_trust_command(PamojaGatewayNetwork *network,
                                                  uint32_t dev_addr,
                                                  uint8_t index,
                                                  uint8_t reload_rate,
                                                  uint8_t bucket_size,
                                                  PamojaLorawanMacCommand *out_command);
void pamoja_gateway_network_free(PamojaGatewayNetwork *network);